<resources>
    <string name="app_name">Forbidden Lands Characters &amp; Dice Roller </string>
    <string name="nav_header_title">Forbidden Lands</string>
    <string name="nav_header_subtitle">Characters &amp; Dice Roller</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_new">New Character</string>
    <string name="menu_list">My Characters</string>
    <string name="menu_options">Options</string>


    <string name="age">Age</string>

    <!-- Attribute Strings -->
    <string name="attributes">Attributes</string>

    <string name="strength">Strength</string>
    <string name="agility">Agility</string>
    <string name="wits">Wits</string>
    <string name="empathy">Empathy</string>

    <!-- Skill Strings -->
    <string name="skills">Skills</string>

    <string name="might">Might</string>
    <string name="endurance">Endurance</string>
    <string name="melee">Melee</string>
    <string name="crafting">Crafting</string>
    <string name="stealth">Stealth</string>
    <string name="sleight_hand">Sleight of Hand</string>
    <string name="move">Move</string>
    <string name="marksmanship">Marksmanship</string>
    <string name="scouting">Scouting</string>
    <string name="lore">Lore</string>
    <string name="survival">Survival</string>
    <string name="insight">Insight</string>
    <string name="manipulation">Manipulation</string>
    <string name="performance">Performance</string>
    <string name="healing">Healing</string>
    <string name="animal_handling">Animal Handling</string>
    <string name="none">None</string>
    <string name="talents">Talents</string>
    <string name="kin_talent">Kin Talent</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dice_roller">Dice Roller</string>
    <string name="points">Points</string>
    <string name="base_dice">Base Dice</string>
    <string name="skill_dice">Skill Dice</string>
    <string name="gear_dice">Gear Dice</string>
    <string name="other_dice">Other Dice</string>
    <string name="next">Next</string>
    <string name="roll">Roll</string>
    <string name="push_roll">Push Roll</string>
    <string name="general_info">General Information</string>
    <string name="pride">Pride</string>
    <string name="describe_your_pride">Describe what your Pride is</string>
    <string name="dark_secret">Dark Secret</string>
    <string name="describe_your_secret">What is your darkest secret?</string>
    <string name="relationships">Relationships</string>
    <string name="add">Add</string>
    <string name="creation_description">Time to create a character! Fill in your Kin, Profession, Attributes and Skills, and fill in the information to describe who you are. Don\'t forget to list any relationships you have with other characters!</string>
    <string name="start">Start</string>
    <string name="body">Body</string>
    <string name="face">Face</string>
    <string name="clothing">Clothing</string>
    <string name="remove">Remove</string>
    <string name="rank">Rank</string>
    <string name="artifact_dice">Artifact Dice</string>
    <string name="other">Other</string>
    <string name="gear">Gear</string>
    <string name="skill">Skill</string>
    <string name="base">Base</string>
    <string name="finish">Finish</string>
    <string name="cost">Cost</string>
    <string name="weight">Weight</string>
    <string name="type">Type</string>
    <string name="hungry">Hungry</string>
    <string name="thirsty">Thirsty</string>
    <string name="sleepy">Sleepy</string>
    <string name="cold">Cold</string>

</resources>
