<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<data>
<variable
    name="charViewModel"
    type="com.robertferreira.forbiddenlandscharcreator.ui.charcreation.CharViewModel" />
</data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/next_info_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/im_fell_great_primer"
                    android:text="@string/body"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/body_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="@font/im_fell_great_primer"
                    android:inputType="textPersonName"
                    android:text="@={charViewModel.Body}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/im_fell_great_primer"
                    android:text="@string/face"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/face_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="@font/im_fell_great_primer"
                    android:inputType="textPersonName"
                    android:text="@={charViewModel.Face}" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/im_fell_great_primer"
                    android:text="@string/clothing"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/clothing_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="@font/im_fell_great_primer"
                    android:inputType="textPersonName"
                    android:text="@={charViewModel.Clothing}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/im_fell_great_primer"
                    android:text="@string/pride"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/pride_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:ems="10"
                    android:fontFamily="@font/im_fell_great_primer"
                    android:gravity="start|top"
                    android:hint="@string/describe_your_pride"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:minLines="3"
                    android:singleLine="false"
                    android:text="@={charViewModel.Pride}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/im_fell_great_primer"
                    android:text="@string/dark_secret"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/dark_secret_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="@font/im_fell_great_primer"
                    android:gravity="start|top"
                    android:hint="@string/describe_your_secret"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:minLines="3"
                    android:singleLine="false"
                    android:text="@={charViewModel.DarkSecret}" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="8dp"
                    android:background="@color/BackgroundGray"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/im_fell_great_primer"
                        android:text="@string/relationships"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <ImageButton
                        android:id="@+id/add_relation_button"
                        style="@android:style/Widget.DeviceDefault.ImageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/Transparent"
                        android:src="@drawable/ic_add_black" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/relations_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:orientation="vertical"></LinearLayout>

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/next_info_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/im_fell_great_primer"
            android:gravity="center"
            android:text="@string/finish"
            android:textAlignment="center"
            android:textColor="@color/backgroundLightGray"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>