<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="charViewModel"
            type="com.robertferreira.forbiddenlandscharcreator.ui.charcreation.CharCreationViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"
        android:backgroundTint="@color/BackgroundGray"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <Spinner
                    android:id="@+id/kinSpinner"
                    style="@android:style/Widget.Material.Light.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:foregroundTint="@android:color/white" />

                <Spinner
                    android:id="@+id/professionSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/kin_talent_display"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:foregroundTint="@android:color/white"
                    android:gravity="center_vertical"
                    android:hint="@string/kin_talent"
                    android:visibility="visible" />

                <Spinner
                    android:id="@+id/prof_talent_spinner"
                    style="@android:style/Widget.Material.Light.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:foregroundTint="@android:color/white"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="199dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <Spinner
                    android:id="@+id/ageSpinner"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="2" />

                <EditText
                    android:id="@+id/ageNumber"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autofillHints="Age Number"
                    android:hint="@string/age"
                    android:inputType="number" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/attr_title_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:clickable="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:text="@string/attributes"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/attribute_points"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|end" />

                <ImageView
                    android:id="@+id/drop_attr_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:srcCompat="@android:drawable/arrow_down_float" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/attr_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/strength" />

                    <com.robertferreira.forbiddenlandscharcreator.ui.customviews.StepperRow

                        android:id="@+id/strength_stepper"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        app:init_value="2" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/agility" />

                    <com.robertferreira.forbiddenlandscharcreator.ui.customviews.StepperRow
                        android:id="@+id/agility_stepper"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        app:init_value="2" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/wits" />

                    <com.robertferreira.forbiddenlandscharcreator.ui.customviews.StepperRow
                        android:id="@+id/wits_stepper"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        app:init_value="2" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/empathy" />

                    <com.robertferreira.forbiddenlandscharcreator.ui.customviews.StepperRow
                        android:id="@+id/empathy_stepper"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        app:init_value="2" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/talents_title_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:fontFamily="monospace"
                    android:text="@string/talents"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/talent_points"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:gravity="center_vertical|end" />

                <Button
                    android:id="@+id/add_talent_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/drop_talent_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:srcCompat="@android:drawable/arrow_down_float" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/talents_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <LinearLayout
                    android:id="@+id/talent_list_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"></LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/new_next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="@+id/scrollView2"
        app:layout_constraintStart_toStartOf="@+id/scrollView2"
        app:srcCompat="@android:drawable/ic_media_play" />

    <!--
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:backgroundTint="@color/BackgroundGray"
            app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
            app:layout_constraintEnd_toEndOf="@+id/scrollView2"
            app:srcCompat="@android:drawable/ic_media_next" />-->

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>